# EMLife-CLI

./: .gitignore  CMakeLists.txt  README.md  TODO.md
cmake/: EMLifeConfig.cmake
doc/: create_maze.md  get_maze_as_str.md  warning_and_error.md
include/EMLife/: EMLife.h  eml_exception.h  emlexcept.h  map.h
src/: main.cpp
src/map/: map.cpp  maze.cpp
test/: CMakeLists.txt  test_demon.cpp  test_except.cpp  test_map_items.cpp  test_maze.cpp  test_maze.h
